@@ -1,3 +1,3 @@
-usr/lib/python*/{dist,site}-packages/qgis/*.py
-usr/lib/python*/{dist,site}-packages/qgis/*.so
+usr/lib/python*/*-packages/qgis/*.py
+usr/lib/python*/*-packages/qgis/*.so
 usr/lib/libqgispython.so.{QGIS_ABI}
